# tts-system

./: .gitignore  ARCH.md  RATIONALE.md  README.md  REQS.md  WRITEUP.md  docker-compose.yaml  main.py  pyproject.toml
app/: main.py  settings.py
architecture_diags/: ARCH.md  providers.md  queue.md  (+2 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  stream_output.pcm  stream_output_coqui.pcm  test_client_coqui_tts.py  test_client_mock_provider.py
backend/app/: api.py  audio.py  cli.py  config.py  container.py  logging_utils.py  main.py  metrics.py
backend/app/engines/: base.py  dummy.py
backend/app/models/: __init__.py  api.py  audio_format.py  domain.py
backend/app/providers/: __init__.py  base.py  coqui_tts.py  mock_tone.py  registry.py
backend/app/repositories/: __init__.py  sessions.py  voices.py
backend/app/services/: circuit_breaker.py  rate_limiter.py  session_queue.py  transcode_service.py  tts_service.py
backend/app/tests/: __init__.py  test_circuit_breaker.py  test_logging_middleware.py  test_metrics.py  test_rate_limit_integration.py  test_rate_limiter.py  test_transcode_service.py  test_tts_service.py
backend/app/tests/e2e/: test_e2e_mock_tone.py
backend/app/tests/integration/: test_create_session_normalization.py  test_http_api.py  test_websocket_streaming.py
backend/app/tests/unit/: test_session_queue.py  test_transcode_service.py  test_tts_service.py
backend/archive/: test_client_coqui_tts.py
backend/frontend/: index.html  main.js
backend/integration_test/: __init__.py  test_e2e_coqui_tts.py  test_e2e_mock_tone.py
(+22 files in other folders)
