[project]
name = "voice-tts-kr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "httpx>=0.27.0",
    "ffmpeg-python>=0.2.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "TTS>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
